--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div class="app-layout">
-  <app-header class="app-layout__header"></app-header>
-  <app-side-bar class="app-layout__navbar"></app-side-bar>
-  <app-home class="app-layout__main"></app-home>
-  <app-footer class="app-layout__footer"></app-footer>
+<div class="grid grid-rows-[auto_1fr] min-h-screen bg-gradient-to-r from-cyan-500 to-blue-500">
+  <app-header class="flex justify-center p-16"></app-header>
+  <app-student-list class="flex justify-center"></app-student-list>
 </div>
