--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,11 @@
-<header>
-  <a href="/">
-    <img src="assets/logo.png" alt="Logo de la empresa">
-  </a>
+<header class="flex items-center w-fit shadow-2xl bg-white rounded-lg gap-8 px-6 py-4">
+  <h1 class="text-3xl font-bold cursor-pointer hover:scale-105 duration-300">Class Manager</h1>
+  <nav>
+    <ul class="flex font-semibold gap-4">
+      <li class="hover:text-sky-500"><a href="">Courses</a></li>
+      <li class="hover:text-sky-500"><a href="">Students</a></li>
+      <li class="hover:text-sky-500"><a href="">Teachers</a></li>
+      <li class="hover:text-sky-500"><a href="">Help</a></li>
+    </ul>
+  </nav>
 </header>
