--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-rows-[auto_1fr] min-h-screen bg-gradient-to-r from-cyan-500 to-blue-500">
-  <app-header class="flex justify-center p-16"></app-header>
-  <app-student-list class="flex justify-center"></app-student-list>
+<div class="grid grid-rows-[auto_1fr] min-h-screen bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
+  <app-header></app-header>
+  <app-login-form></app-login-form>
 </div>
