--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
-<header class="flex items-center w-fit shadow-2xl bg-white rounded-lg gap-8 px-6 py-4">
-  <h1 class="text-3xl font-bold cursor-pointer hover:scale-105 duration-300">Class Manager</h1>
+<header class="flex flex-wrap justify-around items-center shadow-xl bg-white gap-8 px-6 py-4">
+  <h1 class="text-3xl font-bold cursor-pointer hover:scale-105 duration-300">Noogle Drive</h1>
   <nav>
-    <ul class="flex font-semibold gap-4">
-      <li class="hover:text-sky-500"><a href="">Courses</a></li>
-      <li class="hover:text-sky-500"><a href="">Students</a></li>
-      <li class="hover:text-sky-500"><a href="">Teachers</a></li>
-      <li class="hover:text-sky-500"><a href="">Help</a></li>
+    <ul class="flex font-semibold gap-6">
+      <li class="hover:text-purple-500"><a href="">Home</a></li>
+      <li class="hover:text-purple-500"><a href="">Pricing</a></li>
+      <li class="hover:text-purple-500"><a href="">Sign up</a></li>
+      <li class="hover:text-purple-500"><a href="">Launch app</a></li>
     </ul>
   </nav>
 </header>
