--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="grid grid-rows-[auto_1fr] min-h-screen bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
-  <app-header></app-header>
-  <app-login-form></app-login-form>
-</div>
+<main class="flex justify-center items-center bg-gradient-to-r from-rose-400 via-fuchsia-500 to-indigo-500 min-h-screen">
+  <app-list-products></app-list-products>
+</main>
